--- a/templates/bingorules.html
+++ b/templates/bingorules.html
@@ -36,7 +36,7 @@
                 BingoRules<br>
                 尋寶解謎
             </h2>
-            <div class="inbox" style="background-color: #000;">
+            <div class="inbox" style="background-color: #000; border: 5px solid #f0f0f0;">
                 ◇ 一、三、五小隊為A組，找藍綠色扭蛋 <br>
                 ◇ 二、四、六小隊為B組，找粉色扭蛋 <br>
                 ◇ 隊員會對半分，繩子綁在手上一起行動<br>
