--- a/templates/casinorules.html
+++ b/templates/casinorules.html
@@ -54,7 +54,7 @@
                 CasinoRules<br>
                 各遊戲規則
             </h2>
-            <ul style="position: sticky; top: 80px; z-index: 10;">
+            <ul style="position: sticky; top: 60px; z-index: 10;">
                 <li onclick="scrollto('casino1')">射龍門</li>
                 <li onclick="scrollto('casino2')">妞妞</li>
                 <li onclick="scrollto('casino3')">21點</li>
@@ -93,7 +93,7 @@
 
                 <dd style="border-left: 3px none #777; margin: 5px 0px 5px 15px; padding: 0px;">特殊規則</dd>
                 <dd>
-                    當龍門為相同的牌(Ex：7、7 或)時：<br>
+                    當龍門為相同的牌(Ex：7、7 )時：<br>
                     ◇ 自行決定是否下注成為玩家，可選大於或小於龍門牌。<br>
                     ◇ 關主從左手邊第一位玩家順時針各發一張牌。<br> 
 
