--- a/templates/team_detail.html
+++ b/templates/team_detail.html
@@ -39,12 +39,12 @@
 	                </tr>
 
 	                <tr>
-	                <td>18:00 - 19:00</td>
+	                <td>18:00 - 18:45</td>
 	                <td>破冰</td>
 	                </tr>
 
 	                <tr>
-	                <td>19:30 - 21:20</td>
+	                <td>19:15 - 21:00</td>
 	                <td>Bingo</td>
 	                <td style="border-left: 3px solid #555">理工二館三樓</td>
 	                </tr>
@@ -133,7 +133,31 @@
 	        Teammate<br>
 	        分隊名單
 	    </h2>
-	    <img src="{% static 'img/foo.png' %}" />
+		<div class="inbox" style="background-color: #262626; border: 5px solid #f0f0f0; font-family:'Microsoft JhengHei', 'PingFang', 'Heiti TC', '微軟正黑體', sans-serif;">
+			◇ 第一小隊<br>
+			隊輔：黃智宣、蔡秉錡<br>
+			成員：周芷嫻、王唯瑄、王鈺萱、黃科翰、郭畇呈、吳政遠、陳致瑋<br>
+			<hr>
+			◇ 第二小隊<br>
+			隊輔：林哲銘、邱哲偉<br>
+			成員：許宥欣、王郁勻、林立恩、吳冠緯、陳智群、吳柏逸、林皇勳<br>
+			<hr>
+			◇ 第三小隊<br>
+			隊輔：蔡芝盈、王品淳<br>
+			成員：吳綺恩、王芓凝、趙文卿、陳志勳、林瑾安、謝人傑、陳奕安<br>
+			<hr>
+			◇ 第四小隊<br>
+			隊輔：楊逸、陳明哲<br>
+			成員：施敏藝、黃于珊、朱彥綸、全宇安、李柏毅、鄭義蘴、黃正承<br>
+			<hr>
+			◇ 第五小隊<br>
+			隊輔：謝宜臻、陳曉璇<br>
+			成員：陳思彤、林巧穎、蔡昇倫、鐘新凱、李佳謙、劉承諺、楊程安<br>
+			<hr>
+			◇ 第六小隊<br>
+			隊輔：林君鴻、黃以丞<br>
+			成員：黃薏蒨、唐睿頎、陳之堯、陳柏叡、潘威愷、蘇柏叡、林鈺翔、鍾喆安<br>
+		</div>
 	</div>
 
 	<div class="boxbg" style="background-color: #555;">
@@ -141,11 +165,27 @@
 	        Roommmate<br>
 	        分房名單
 	    </h2>
-	    <img src="{% static 'img/foo.png' %}" />
+	    <div class="inbox" style="background-color: #262626; border: 5px solid #f0f0f0; font-family:'Microsoft JhengHei', 'PingFang', 'Heiti TC', '微軟正黑體', sans-serif;">
+			◇ 女生房：<br>
+			房一：許宥欣、王鈺萱、王芓凝、黃薏蒨<br>
+			房二：林巧穎、黃于珊、施敏藝<br>
+			房三：王郁勻、唐睿頎、王唯瑄<br>
+			房四：吳綺恩、周芷嫻、陳思彤<br>
+			<hr>
+			◇ 男生房：<br>
+			房五：陳智群、蔡昇倫、楊程安、鐘新凱<br>
+			房六：朱彥綸、陳致瑋、趙文卿、陳之堯<br>
+			房七：陳柏叡、林皇勳、潘威愷、陳志勳<br>
+			房八：黃正承、李佳謙、郭畇呈、鍾喆安<br>
+			房九：全宇安、吳冠緯、陳奕安、林立恩<br>
+			房十：吳柏逸、鄭義蘴、黃科翰、林瑾安<br>
+			房十一：謝人傑、李柏毅、吳政遠<br>
+			房十二：蘇柏叡、劉承諺、林鈺翔<br>
+        </div>
 	</div>
 
 	<div class="socialmedia">
-	    <span class="blink">▶</span>
+	    <span class="blink">▶︎</span>
 	    <h2 class="signup">
 	        <a href="https://www.instagram.com/ndhucsie.114.camp/?igsh=MzRmb3dnZHdra2N0&utm_source=qr#">
 	        Instagram
