--- a/static/css/table.css
+++ b/static/css/table.css
@@ -25,9 +25,9 @@
 table{
 	background: #333;
 	width: 100%;
-    text-align: center;
+        text-align: center;
 	align-items: center;
-    display: table;
+        display: table;
 }
 .table-container table{
     display: none;
@@ -68,7 +68,6 @@ table tr td input{
 	opacity: .5;
 }
 table tr button{
-	padding: 5px 5px;
 	text-decoration: none;
 	background-color: #b8f818;
 }
@@ -115,15 +114,18 @@ table tr select{
 	table tr td{
 		padding: 6px;
 	}
+        table tr button{
+                padding: 2px 5px;
+        }
 	table tr td.record{
 		text-align: center;
 		padding: 6px 10px 0px;
-    }
+        }
 	table tr td.time{ 
 		text-align: right;
 		padding: 2px 10px 6px;
 		font-size: 8px;
-    }
+        }
 	table caption{
 		padding: 5px 30px;
 	}
@@ -162,6 +164,9 @@ table tr select{
 		border-top: 3px solid #555;
 		border-bottom: 3px solid #555;
 	}
+        table tr button{
+                padding: 5px;
+        } 
 	table tr td{
 		padding: 10px;
 	}
@@ -169,13 +174,13 @@ table tr select{
 		vertical-align: middle; 
 		text-align: center;
 		padding: 10px 10px 0px;
-    }
+        }
 	table tr td.time{
 		vertical-align: middle; 
 		text-align: right;
 		padding: 2px 10px 10px;
 		font-size: 12px;
-    }
+        }
 	table caption{
 		padding: 5px 60px;
 	}
