--- a/templates/change.html
+++ b/templates/change.html
@@ -17,7 +17,8 @@
           <tr><td style="color:#f00;">{{ error_msg }}</td></tr>
       {% endif %}
           <tr><td><input type="text" name="username" placeholder="帳號" required><br></td></tr>
-          <tr><td><input type="password" name="password" placeholder="密碼" required><br></td></tr>
+          <tr><td><input type="password" name="password" placeholder="舊密碼" required><br></td></tr>
+          <tr><td><input type="password" name="newpassword" placeholder="新密碼" required><br></td></tr>
           <tr><td><button type="submit">更改</button></td></tr>
       </table>
       </form>
